tests/golden/fixtures/syntax-store-from-a-far-load/expected.err
Error: 'ptr' is a 3-byte :far value; no register can hold it directly.
   ╭─[ tests/golden/fixtures/syntax-store-from-a-far-load/input.k65:5:11 ]
   │
 5 │     dst = a = ptr
   │           ───┬───  
   │              ╰───── here
   │ 
   │ Help: use a partial view (e.g. ptr:word for the low 16 bits, (ptr+2):byte for the bank byte) or indirect-long ([ptr])
───╯

Error: Store to var dst:byte requires @a8.
   ╭─[ tests/golden/fixtures/syntax-store-from-a-far-load/input.k65:5:5 ]
   │
 5 │     dst = a = ptr
   │     ───┬───  
   │        ╰───── here
───╯
